modified:   style.css

--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ nav {
 }
 
 body {
-    font-family: 'Helvetica Neue', Arial, sans-serif;
+    font-family: 'Bebas Neue', sans-serif;
     background-color: #f7f7f7;
     color: #333;
     margin: 0; 
